# gitj

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: screenshots.rs
src/: backend.rs  imagediff.rs  lib.rs  main.rs  style.rs  ui.rs  widgets.rs
src/backend/: fixture.rs  git2_backend.rs  mod.rs  patch.rs
src/widgets/: button.rs  commit_list.rs  diff_pane.rs  diff_view.rs  graph.rs  heading.rs  image_diff_view.rs  layout.rs  listbox.rs  mod.rs  panes.rs  scrollbox.rs  search_bar.rs  shared.rs  shell.rs
tests/: commit_backend.rs  git2_backend.rs  image_blobs.rs  partial_stage.rs  shortcuts.rs  snapshots.rs
tests/common/: mod.rs
tests/snapshots/: commit_mode_amend_unstage.snap  diff_view_scrolled_1_00.snap
